--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="mp_tictactoe">
+  <meta name="apple-mobile-web-app-title" content="Zero-Katta">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>mp_tictactoe</title>
+  <title>Zero-Katta</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
